@@ -390,7 +390,7 @@ public class FixedHeightLayoutCache
    * @param parentPath the parent path
    * @return the enumeration over pathes
    */
-  public Enumeration getVisiblePathsFrom(TreePath parentPath)
+  public Enumeration<TreePath> getVisiblePathsFrom(TreePath parentPath)
   {
     if (dirty)
       update();
