@@ -468,7 +468,7 @@ public class VariableHeightLayoutCache
    * @param parentPath the parent path
    * @return the enumeration over pathes
    */
-  public Enumeration getVisiblePathsFrom(TreePath parentPath)
+  public Enumeration<TreePath> getVisiblePathsFrom(TreePath parentPath)
   {
     if (dirty)
       update();
